--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/react": "^5.5.0",
     "@fullcalendar/resource-timeline": "^5.5.0",
     "@fullcalendar/timegrid": "^5.5.0",
+    "bcryptjs": "^2.4.3",
     "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
