--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
